<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="F_Variable_FromUI" Id="{3c6e2f74-f421-440a-85cc-3186748b1d48}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_Variable_FromUI: BOOL


VAR
	rRotationAlarm_Reset: R_TRIG;
	
	Rotation_Shift: WORD;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[////UI에서 Write하는 Command
//아래 MC는 Maint 모드에서만 조작 가능
//GVL_COMMAND_FROM_UI.CMD_HEATER_MAIN_MC_ON:= GVL_IO.aOutputCmd[1].0;
//GVL_COMMAND_FROM_UI.CMD_THERMAL_BACH_MC_ON:= GVL_IO.aOutputCmd[1].1;
//GVL_COMMAND_FROM_UI.CMD_VACUUM_PUMP_MC_ON:= GVL_IO.aOutputCmd[1].2;
//GVL_COMMAND_FROM_UI.CMD_LINE_HEATER_MC_ON := GVL_IO.aOutputCmd[1].3;

GVL_COMMAND_FROM_UI.CMD_VACUUM_PUMP_ON := GVL_IO.aOutputCmd[1].6;
GVL_COMMAND_FROM_UI.CMD_VACUUM_PUMP_RESET:= GVL_IO.aOutputCmd[1].7;

GVL_COMMAND_FROM_UI.CMD_ROTATION_START:= GVL_IO.aOutputCmd[1].8;
GVL_COMMAND_FROM_UI.CMD_ROTATION_RESET := GVL_IO.aOutputCmd[1].10;

//jhkang 하드웨어로 구성 되어 있어야 하는데 아직 구성 안됨 := GVL_IO.aOutputCmd[1].10;
GVL_COMMAND_FROM_UI.CMD_E3508_MAN_AUTO := GVL_IO.aOutputCmd[1].12;(*True:Manual  False:auto*)
GVL_COMMAND_FROM_UI.CMD_THROTTLE_PRESSURE_POSITION_MODE := GVL_IO.aOutputCmd[1].13;//true: Pressure False:Position

GVL_COMMAND_FROM_UI.CMD_THROTTLE_OUTPUT_MODE:= WORD_TO_USINT(GVL_IO.aOutputCmd[2]); //Throttle Valve Mode Setting 0:Normal 1:Close 2:Open 3:Hold 4:Reset

GVL_IO_GAS_CABINET.DO_07_GraphiteHeaterMC :=  GVL_COMMAND_FROM_UI.CMD_HEATER_MAIN_MC_ON;
GVL_IO_GAS_CABINET.DO_07_ThermalBathsMC :=  GVL_COMMAND_FROM_UI.CMD_THERMAL_BACH_MC_ON;
GVL_IO_GAS_CABINET.DO_07_VacuumPumpMC :=  GVL_COMMAND_FROM_UI.CMD_VACUUM_PUMP_MC_ON;
GVL_IO_GAS_CABINET.DO_07_LineHeatersMC:=  GVL_COMMAND_FROM_UI.CMD_LINE_HEATER_MC_ON;

//GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationFWD:=GVL_COMMAND_FROM_UI.CMD_ROTATION_START;

rRotationAlarm_Reset(CLK:=GVL_COMMAND_FROM_UI.CMD_ROTATION_RESET);
IF rRotationAlarm_Reset.Q THEN
	GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationAL_RST:=TRUE;
END_IF

GVL.RotationResetTon(IN:=GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationAL_RST,PT:=T#3S);

IF GVL_IO_REACTOR_CABINET.DI_02_SusceptorRotationMotorFault = TRUE OR GVL.RotationResetTon.Q THEN
	GVL.RotationResetTon(in:=FALSE);
	IF GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationAL_RST = TRUE THEN
		GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationAL_RST:=FALSE;
	END_IF
	
	IF GVL_IO.aOutputCmd[1].10 = TRUE THEN
		GVL_IO.aOutputCmd[1].10:=FALSE;
	END_IF
END_IF


	//GVL_IO_REACTOR_CABINET.DO_05_SusceptorRotationAL_RST:=GVL_COMMAND_FROM_UI.CMD_ROTATION_RESET;	
GVL_IO_REACTOR_CABINET.DO_05_VacuumPumpStart_Stop := GVL_COMMAND_FROM_UI.CMD_VACUUM_PUMP_ON;
GVL_IO_REACTOR_CABINET.DO_05_VacuumPumpReset:=GVL_COMMAND_FROM_UI.CMD_VACUUM_PUMP_RESET;]]></ST>
    </Implementation>
    <LineIds Name="F_Variable_FromUI">
      <LineId Id="102" Count="13" />
      <LineId Id="117" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="118" Count="8" />
      <LineId Id="159" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="148" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="150" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="175" Count="2" />
      <LineId Id="151" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="91" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>